--- a/templates/index1.html
+++ b/templates/index1.html
@@ -91,7 +91,7 @@
 
 
   <ul class="container">
-    <!-- Palette boxes with color pickers will be dynamically generated here -->
+  
   </ul>
   <button class="refresh-btn">Refresh Palette</button>
 
@@ -106,8 +106,8 @@
 
   <script>
     document.getElementById("back").addEventListener("click", function(event) {
-      event.preventDefault(); // Prevent the default action of the anchor element
-      window.history.back(); // Navigate back to the previous page or action
+      event.preventDefault(); 
+      window.history.back(); 
     });
   </script>
 
